# Beetle

./: .bochsrc  .gitignore  CMakeLists.txt  Makefile  README.md  boot-stage-1  build-grubconfig.sh  linker.ld  test.c  tmp  toolchain.cmake
arch/: Makefile
arch/i386/: Makefile  __cxa_pure_virtual.cpp  apic.cpp  apic.hpp  assembly.s  cpuid.cpp  cpuid.hpp  gdt.cpp  get_cpuid.s  get_gdtr.s  get_idtr.s  global_table.cpp  i386.hpp  interrupt.s  io.cpp  io.hpp  load.s  mem.cpp  mem.hpp  switch_gdt.s  switch_idt.s  table.cpp
beetle/: CMakeLists.txt  Makefile  arch.hpp  beetle.cpp  beetle.hpp  elf.hpp  kmain.cpp  linker.ld  mm.cpp  mm.hpp  multiboot.cpp  multiboot.hpp  process.cpp  process.hpp  services.hpp  vga_pc.cpp  vga_pc.hpp  vga_pc_c_api.h
beetle/arch/i386/: CMakeLists.txt  Makefile  i386.cpp  i386.hpp  interrupts.cpp  port.cpp  port.s  preinit.s  protected.cpp
beetle/arch/i386/include/: descriptor.hpp  descriptor.s  interrupts.hpp  port.hpp  protected.hpp
beetle/arch/i386/src/: arch.cpp  i386.cpp  interrupts.cpp  preinit.asm  preinit.s
beetle/include/: mm.hpp  multiboot.hpp  privileges.hpp  system.hpp
beetle/include/beetle/: arch.hpp  archs.cpp.hpp  multiboot.hpp
beetle/include/elf/: elf.h
beetle/services/: CMakeLists.txt
beetle/services/process_manager/: CMakeLists.txt  main.cpp
beetle/src/: elf.cpp  header.asm  kmain.cpp  mm.cpp  multiboot.cpp  process.cpp
beetle/system/: system_arm.cpp  system_i386.cpp  system_i386_pc.cpp
boot/: Makefile  header.s
boot/boot-stage-1/: Makefile  boot-stage-1  boot-stage-1.cpp  header.s  linker.ld
boot/boot-stage-1/boot_i386_pc/: i386_pc_init.cpp  i386_pc_main.s  system_i386_pc.cpp  system_i386_pc_main.s  vga_pc.cpp  vga_pc.hpp
drivers/: Makefile
drivers/vga/: main.cpp
libc/: CMakeLists.txt  stdint.h  stdio.h  stdlib.h  string.c  string.h
libc/i386/: vga_pc.h
libc/include/: string.h
libc/src/: _start.c  crt0.c  stdio.c  string.c
libc/src/i386/: vga_pc.c
libc/src/misc/: crt0.c  crti.asm  crtn.asm
services/: CMakeLists.txt
services/pmn/: CMakeLists.txt  main.c  main.cpp
